Add sc.microsite to find-links
Package has no public release yet.

--- a/travis.cfg
+++ b/travis.cfg
@@ -3,6 +3,9 @@ extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
+allow-hosts += github.com
+find-links += https://github.com/simplesconsultoria/sc.microsite/archive/1.0b2.zip#egg=sc.microsite-1.0b2
+
 package-name = brasil.gov.paginadestaque
 package-extras = [test]
 
