--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,8 @@ extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
-find-links += http://www.simplesnet.com.br/pacotes/catalogo/simple
+find-links +=
+    https://github.com/simplesconsultoria/sc.microsite/archive/1.0b2.zip#egg=sc.microsite-1.0b2
 
 package-name = brasil.gov.paginadestaque
 package-extras = [test]
