--- a/travis.cfg
+++ b/travis.cfg
@@ -24,3 +24,7 @@ imports = False
 prefer-single-quotes = True
 return-status-codes = True
 utf8-header = True
+
+[versions]
+# use latest version of setuptools
+setuptools =
