--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ install:
   - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
+  - bin/buildout -c travis.cfg annotate
   - bin/buildout -c travis.cfg -N -q
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-script: bin/test
-after_success: bin/code-analysis
-after_failure: bin/buildout annotate -c travis.cfg
+script: bin/code-analysis && bin/test
+after_success: bin/coverage.sh && pip install -q coveralls && coveralls || true
 notifications:
   irc: irc.freenode.org#plonegovbr
