Set package-min-coverage to actual coverage

--- a/travis.cfg
+++ b/travis.cfg
@@ -8,6 +8,7 @@ find-links += https://github.com/simplesconsultoria/sc.microsite/archive/1.0b2.z
 
 package-name = brasil.gov.paginadestaque
 package-extras = [test]
+package-min-coverage = 74
 
 parts +=
     coverage-sh
