Implement IBackgroundImage behavior to add the possibility of having a background image on the default view of the item

--- a/travis.cfg
+++ b/travis.cfg
@@ -27,5 +27,6 @@ return-status-codes = True
 utf8-header = True
 
 [versions]
+collective.cover = 1.0a6
 # use latest version of setuptools
 setuptools =
