Refactor development configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,30 +1,14 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
-    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-
-find-links +=
-    https://github.com/simplesconsultoria/sc.microsite/archive/1.0b2.zip#egg=sc.microsite-1.0b2
-
-package-name = brasil.gov.paginadestaque
-package-extras = [test]
+    base.cfg
 
 parts +=
-    code-analysis
     i18ndude
     omelette
 
 [code-analysis]
-recipe = plone.recipe.codeanalysis
-directory = ${buildout:directory}/src/brasil/gov/paginadestaque
 pre-commit-hook = True
-flake8-ignore = E501
-clean-lines = True
-deprecated-aliases = True
-imports = False
-prefer-single-quotes = True
-return-status-codes = True
-utf8-header = True
 
 [i18ndude]
 recipe = zc.recipe.egg
@@ -33,6 +17,3 @@ eggs = i18ndude
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
-
-[versions]
-collective.cover = 1.0a6
