--- a/travis.cfg
+++ b/travis.cfg
@@ -1,32 +1,11 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
-    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-
-allow-hosts += github.com
-find-links += https://github.com/simplesconsultoria/sc.microsite/archive/1.0b2.zip#egg=sc.microsite-1.0b2
-
-package-name = brasil.gov.paginadestaque
-package-extras = [test]
-package-min-coverage = 74
+    base.cfg
 
 parts +=
     coverage-sh
     createcoverage
 
 [code-analysis]
-recipe = plone.recipe.codeanalysis
-directory = ${buildout:directory}/src/brasil/gov/paginadestaque
 pre-commit-hook = False
-flake8-ignore = E501
-clean-lines = True
-deprecated-aliases = True
-imports = False
-prefer-single-quotes = True
-return-status-codes = True
-utf8-header = True
-
-[versions]
-collective.cover = 1.0a6
-# use latest version of setuptools
-setuptools =
