--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ extends =
 parts +=
     i18ndude
     omelette
+    rebuild_i18n-sh
 
 [code-analysis]
 pre-commit-hook = True
@@ -17,3 +18,9 @@ eggs = i18ndude
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
+
+[rebuild_i18n-sh]
+recipe = collective.recipe.template
+url = https://raw.github.com/collective/buildout.plonetest/master/templates/rebuild_i18n.sh.in
+output = ${buildout:directory}/bin/rebuild_i18n.sh
+mode = 755
