--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/manifest.cfg
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Página Destaque - Tema Cinza
+title = Página de Destaque - Tema Cinza
 description = Tema para Página de Destaque do Portal Padrão
 author = Simples Consultoria
 author_email = products@simplesconsultoria.com.br
