--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     base.cfg
+    versions.cfg
 
 parts +=
     i18ndude
