--- a/travis.cfg
+++ b/travis.cfg
@@ -2,6 +2,7 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
     base.cfg
+    versions.cfg
 
 parts +=
     coverage-sh
