Code-analysis no padrão dos demais plonegovbr.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,31 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+    https://raw.githubusercontent.com/plone/plone.app.robotframework/master/versions.cfg
     base.cfg
+    versions.cfg
 
 parts +=
     i18ndude
     omelette
+    node
     rebuild_i18n-sh
+    code-analysis
 
 [code-analysis]
+recipe = plone.recipe.codeanalysis
+directory = ${buildout:directory}/src/brasil/gov/paginadestaque
 pre-commit-hook = True
+flake8-ignore = E501
+clean-lines = True
+csslint = True
+csslint-bin = bin/csslint
+deprecated-aliases = True
+return-status-codes = True
+imports = True
+prefer-single-quotes = True
+utf8-header = True
 
 [i18ndude]
 recipe = zc.recipe.egg
