Refactor development and CI configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,16 +2,18 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    https://raw.githubusercontent.com/plone/plone.app.robotframework/master/versions.cfg
-    base.cfg
-    versions.cfg
+    https://raw.github.com/plone/plone.app.robotframework/master/versions.cfg
+
+package-name = brasil.gov.paginadestaque
+package-extras = [test]
 
 parts +=
-    i18ndude
-    omelette
-    node
-    rebuild_i18n-sh
     code-analysis
+    createcoverage
+    i18ndude
+    node
+    omelette
+    rebuild_i18n-sh
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
@@ -40,3 +42,12 @@ recipe = collective.recipe.template
 url = https://raw.github.com/collective/buildout.plonetest/master/templates/rebuild_i18n.sh.in
 output = ${buildout:directory}/bin/rebuild_i18n.sh
 mode = 755
+
+[versions]
+collective.cover = 1.0a9
+# use latest version of setuptools
+setuptools =
+
+# XXX: Versão 3.3.1 de collective.js.bootstrap passa a pedir como dependência
+# plone.app.jquery>=1.8.3, dando conflito no release do Plone 4.3.x.
+collective.js.bootstrap = 2.3.1.1
