--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,9 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    https://raw.github.com/plone/plone.app.robotframework/master/versions.cfg
+    https://raw.githubusercontent.com/plonegovbr/portalpadrao.release/master/1.0.5/versions.cfg
+    https://raw.githubusercontent.com/plonegovbr/portal.buildout/master/buildout.d/versions.cfg
+    https://raw.githubusercontent.com/plone/plone.app.robotframework/master/versions.cfg
 
 package-name = brasil.gov.paginadestaque
 package-extras = [test]
@@ -18,16 +20,20 @@ parts +=
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/brasil/gov/paginadestaque
-pre-commit-hook = True
-flake8-ignore = E501
 clean-lines = True
 csslint = True
 csslint-bin = bin/csslint
 deprecated-aliases = True
+flake8-extensions =
+    flake8-blind-except
+    flake8-coding
+    flake8-debugger
+    flake8-quotes
+flake8-ignore = E501
+jshint = True
+jshint-bin = bin/jshint
+multiprocessing = True
 return-status-codes = True
-imports = True
-prefer-single-quotes = True
-utf8-header = True
 
 [i18ndude]
 recipe = zc.recipe.egg
@@ -37,17 +43,6 @@ eggs = i18ndude
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
 
-[rebuild_i18n-sh]
-recipe = collective.recipe.template
-url = https://raw.github.com/collective/buildout.plonetest/master/templates/rebuild_i18n.sh.in
-output = ${buildout:directory}/bin/rebuild_i18n.sh
-mode = 755
-
 [versions]
-collective.cover = 1.0a9
 # use latest version of setuptools
 setuptools =
-
-# XXX: Versão 3.3.1 de collective.js.bootstrap passa a pedir como dependência
-# plone.app.jquery>=1.8.3, dando conflito no release do Plone 4.3.x.
-collective.js.bootstrap = 2.3.1.1
