Remove pinning of brasil.gov.paginadestaque to avoid downloading egg instead of using source

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -44,5 +44,6 @@ recipe = collective.recipe.omelette
 eggs = ${test:eggs}
 
 [versions]
+brasil.gov.paginadestaque =
 # use latest version of setuptools
 setuptools =
