Melhora doc pinagem brasil.gov.paginadestaque
Como no extends de versões do release do IDG, logo acima, eu pino
esse pacote, preciso "despiná-lo" aqui para que ele não seja
baixado de novo: o fato dele estar no src não impede o download
dele de novo como um egg se ele estiver pinado no extends.

Além disso, remove o i18ndude uma vez que o qa.cfg já possui essa diretiva.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,6 @@ package-extras = [test]
 parts +=
     code-analysis
     createcoverage
-    i18ndude
     node
     omelette
     rebuild_i18n-sh
@@ -34,15 +33,15 @@ jshint-bin = bin/jshint
 multiprocessing = True
 return-status-codes = True
 
-[i18ndude]
-recipe = zc.recipe.egg
-eggs = i18ndude
-
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
 
 [versions]
+# Como no extends de versões do release do IDG, logo acima, eu pino
+# esse pacote, preciso "despiná-lo" aqui para que ele não seja
+# baixado de novo: o fato dele estar no src não impede o download
+# dele de novo como um egg se ele estiver pinado no extends.
 brasil.gov.paginadestaque =
 # use latest version of setuptools
 setuptools =
