Clean up development and CI configurations (#19)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,6 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    https://raw.githubusercontent.com/plone/plone.app.robotframework/master/versions.cfg
     https://raw.githubusercontent.com/plonegovbr/portal.buildout/master/buildout.d/versions.cfg
 
 package-name = brasil.gov.paginadestaque
@@ -15,22 +14,22 @@ parts +=
     omelette
     rebuild_i18n-sh
 
+[buildout:os.environ.get('LAST_RELEASE')]
+# on CI we set this environment variable to test against previous IDG release
+extends +=
+    http://downloads.plone.org.br/release/1.4rc1/versions.cfg
+
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/brasil/gov/paginadestaque
 clean-lines = True
 csslint = True
 csslint-bin = bin/csslint
-deprecated-aliases = True
-flake8-extensions =
-    flake8-blind-except
-    flake8-coding
-    flake8-debugger
-    flake8-quotes
 flake8-ignore = E501
 jshint = True
 jshint-bin = bin/jshint
 multiprocessing = True
+pre-commit-hook = True
 return-status-codes = True
 
 [omelette]
