Add test dependency on cssselect

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,10 @@ extends =
 package-name = brasil.gov.paginadestaque
 package-extras = [test]
 
+# XXX: seems to be needed by plone.protect = 3.0.26
+#      need to investigate further
+test-eggs = cssselect
+
 parts +=
     code-analysis
     createcoverage
